<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context="com.app.jj.digitalreceipt.MainActivity">

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/details"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />



    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/enter_username"
        android:textSize="15sp"
        android:textAlignment="textStart"
        android:id="@+id/username_id"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/new_pass"
        android:textSize="15sp"
        android:textAlignment="textStart"
        android:id="@+id/newPass_id"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/new_pass_copy"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:textAlignment="textStart"
        android:id="@+id/newPassCopy_id"
        />

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/security"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/sec_question"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/sec_ans"
        android:textSize="15sp"
        android:textAlignment="textStart"
        android:id="@+id/secAns_id"
        />



    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:id="@+id/submitButton_id"
        android:layout_marginTop="20dp"
        />

</LinearLayout>
