<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.app.jj.digitalreceipt.LoginActivity">

    <TextView
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:text="@string/instruct_details"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/user_username"
        android:textSize="15sp"
        android:textAlignment="center"
        android:id="@+id/savedUsername_id"
        />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/user_password"
        android:textSize="15sp"
        android:textAlignment="center"
        android:id="@+id/savedPass_id"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/login_button"
        android:id="@+id/loginButton_id"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/forgotten_button"
        android:id="@+id/forgotButton_id"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/register_here"
        android:id="@+id/registerButton_id"
        android:textColor="#0a0a93"
        android:textIsSelectable="false" />
</LinearLayout>
