<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.jj.digitalreceipt.InfoPopUpActivity"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:gravity="center|top">

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/un_pw_error"-->
        <!--android:textStyle="bold"-->
        <!--android:textSize="23sp"-->
        <!--android:textAlignment="center"-->
        <!--android:background="#3f51b4"-->
        <!--android:textColor="#FFFFFFFF"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:padding="10dp"/>-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/un_req_title"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#101010" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/un_req"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:textColor="#101010" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw_req_title"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#101010" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw_req"
        android:textSize="15sp"
        android:textColor="#101010" />



</LinearLayout>
